--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'css/style1.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <title><center>Ramco Institute of Technology</center></title>
+    <title>Ramco Institute of Technology</title>
 <body>
 
     <div class="rit"></div>
@@ -21,7 +20,7 @@
 
     <div class="heading"><center>RIT CGPA CALCULATION</center></div>
 
-    <div class="row card-row" style="margin-top: 20px;">
+    <div class="row card-row" style="margin-top: 50px; margin-left:350px">
         <div class=" col-md-6">
             <a href="{% url 'hod_index'  %}" class="card-link">
                 <div class="card" style="background-color: 005073;">
@@ -33,7 +32,7 @@
         </div>
         
     </div>
-    <div class="row">
+    <div class="row card-row" style="margin-top: 50px; margin-left:350px">
         <div class="col-md-6 ">
             <a href="{%url 'course_index' %}"  class="card-link">
                 <div class="card" style="background-color: 005073;">
@@ -44,7 +43,7 @@
             </a>
         </div>
     </div>
-    <div class="row">
+    <div class="row" style="margin-top: 50px; margin-left:350px">
         <div class="col-md-6 ">
             <a href="{%url 'student_index' %}"  class="card-link">
                 <div class="card" style="background-color: 005073;">
@@ -56,11 +55,6 @@
         </div>
     </div>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-    <df-messenger
-      intent="WELCOME"
-      chat-title="RIT-Chatbot"
-      agent-id="33accc31-db5a-4fcb-8607-eff8025a91ef"
-      language-code="en"
-    ></df-messenger>
+    
 </div>
 </body>
